# IRSAM2_Benchmark

./: .gitignore  AGENTS.md  BENCHMARK_OVERVIEW.md  BENCHMARK_RUNBOOK.md  EXPERIMENT_PLAN.yaml  README.md  main.py  plan.md  pyproject.toml
configs/: README.md  auto_prompt_v1.example.yaml  benchmark_quick10.yaml  benchmark_quick10_rbgt_tiny.yaml  benchmark_smoke.yaml  benchmark_smoke_rbgt_tiny.yaml  benchmark_v1.yaml  benchmark_v1_rbgt_tiny.yaml  local_paths.example.yaml  m7_proposal_diagnostic_4060m.example.yaml  paper_analysis_v1.yaml  paper_experiments_v1.yaml  server_5090_full_benchmark.yaml  server_auto_prompt_4090x4.example.yaml  server_auto_prompt_4090x4_smoke.yaml  server_auto_prompt_4090x8_m5.example.yaml  server_auto_prompt_4090x8_m6_promptnet_v2.example.yaml  server_auto_prompt_4090x8_m8_multimodal_proposal.example.yaml  server_auto_prompt_4090x8_m9_full.example.yaml  server_auto_prompt_4090x8_m9_rbgt_pretrain.example.yaml  server_benchmark_4090x3_rbgt_voc_safe.example.yaml  server_benchmark_full.example.yaml
docs/: README.md  artifact_schema_spec.md  benchmark_improvement_plan.md  dataset_cards.md  eval_v2_roadmap.md  implementation_notes.md  metric_cards.md  paper_experiment_matrix.md  prompt_policy_spec.md  remote_session_handoff.md  server_5090_benchmark.md  server_benchmark_runbook.md  track_definitions.md
experiment_core/: __init__.py  config.py  data.py  dataset_adapters.py  distributed.py  evaluation.py  method_registry.py  methods.py  metrics.py  models.py  reporting.py  runner.py
reference_results/: README.md
scripts/: README.md  analyze_paper_results.py  build_comparison_evaluation_matrix.py  clean_multimodal_coco_categories.py  common.sh  convert_rbgt_coco_to_voc_ir.py  export_dnanet_predictions.py  export_multimodal_coco.py  export_multimodal_small_target_coco.py  export_rbgt_tiny_box_coco.py  export_third_batch_predictions.py  run_4090x4_auto_prompt.py  run_5090_full_benchmark.py  run_5090_micro_benchmark.py  run_adaptation.sh  run_autodl_smoke.sh  run_baseline.sh  run_baselines.sh  run_full_benchmark.sh  run_m7_proposal_diagnostic.py  run_m9_rbgt_auto_prompt.py  run_multimodal_8gpu.sh  run_multimodal_server_first.sh  run_official_baseline_matrix.py  run_official_baseline_matrix.sh  run_paper_experiments.py  run_pseudo.sh  run_rbgt_8gpu.sh  run_rbgt_server_first.sh  run_smoke.ps1  run_smoke.sh  run_tests.sh  select_auto_prompt_checkpoint.py  setup_autodl_server.sh  summarize_remote_analysis.py  train_auto_prompt.py  visualize_coco_boxes.py
tests/: __init__.py  test_5090_full_benchmark.py  test_analysis_v2.py  test_auto_prompt_runner.py  test_auto_prompt_training.py  test_auto_prompted_sam2.py  test_coco_polygon_adapter.py  (+26 more)
(+67 files in other folders)
